# livenvs

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  configure.sh  run.sh
data/testdata-house/: KeyframeTrajectory.txt  associations.txt  imu.csv  imu_to_left.txt  left_to_right.txt  settings.txt
data/testdata-house/intrinsic/: intrinsic_color.txt
data/traces/: traced_enc_net_1088x1920.pt  traced_enc_net_480x640.pt  traced_enc_net_736x1280.pt  traced_enc_net_992x1312.pt  traced_out_conv_968x1296.pt  traced_ref_unet_1088x1920.pt  traced_ref_unet_480x640.pt  traced_ref_unet_736x1280.pt  traced_ref_unet_992x1312.pt
dataset_configs/: livevs_config.yml
example_vscode_files/: launch.json  settings.json  vsc_env_init.sh
src/: CMakeLists.txt  camera-trajectory-control.cpp  camera-trajectory-control.h  encoded-cache.cpp  encoded-cache.h  globals+gui.cpp  globals+gui.h  main.cpp  manage-datasets.h  nets.cpp  nets.h  preprocessor.cpp  preprocessor.h  proxy-slam-geometry.cpp  proxy-slam-geometry.h  read_write_png_16_wrapper.cpp  read_write_png_16_wrapper.h  rendering.cpp  rendering.h  single-view-geometry.cpp  single-view-geometry.h  tiny_image_io.h  view-selector.cpp  view-selector.h
src/export_utils/: float16.h  write_out.cpp  write_out.h
src/import_utils/: colmap.cpp  colmap.h  cv_utils.h  dataset.cpp  import_utils.cpp  import_utils.h  scannet.cpp  scannet.h
src/shader/: avg2x2.cs  blend_tex_with_color.fs  blit_buffer.fs  blit_neural_buffer.fs  blit_neural_buffer.vs  blit_weight_buffer.fs  blit_weight_buffer.vs  buffers.glsl  deferred-debug.fs  deferred-frag-fusion-feat-pass.cs  deferred-lighting.fs  depth_nonlinear_to_linear.fs  fragment_fusion.glsl  geom_mask.fs  hole-filling-pull.cs  hole-filling-push.cs  layered_blit_buffer.fs  layered_blit_neural_buffer.fs  layered_blit_neural_buffer.gs  localgeom.fs  localgeom.vs  localgeom_coverage.fs  localgeom_deferred.fs  localgeom_fuse_feat.fs  localgeom_refine_mesh.gs  localgeom_refine_mesh.vs  median-filter.fs  merge_depth.cs  motion_score.cs  motion_vectors.cs  pass_to_layers.fs  pass_to_layers.gs  pos+norm+tc,modulated.fs  pos+norm+tc.fs  pos+norm+tc.vs  pos+norm.fs  pos+norm.vs  pos+tc.vs  pos.fs  pos.vs  (+8 more)
third_party_legal_notices/: Imgui.txt  Snake-Slam.txt  assimp.txt  cxxpots.txt  glew.txt  glfw.txt  glm.txt  libpng.txt
